Fix some alignment issues

--- a/yamcs-web/src/main/webapp/src/app/commanding/command-history/TransmissionConstraintsIcon.css
+++ b/yamcs-web/src/main/webapp/src/app/commanding/command-history/TransmissionConstraintsIcon.css
@@ -1,3 +1,8 @@
+:host {
+  line-height: 0;
+  font-size: 0;
+}
+
 .spin {
   animation: yspin 2s infinite linear;
 }
